fix: add visibility for adding input in css file and add classes for dinamically added elements in js file - no rule

--- a/style.css
+++ b/style.css
@@ -135,6 +135,10 @@
   display:none;
 }
 
+.task__input--visible {
+  display: inline-block;
+}
+
 .task--edit .task__input {
   display:inline-block;
   width:224px
